--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,33 +13,47 @@ body {
   background-color: #002841;
   scroll-behavior: smooth;
 }
+
 body::-webkit-scrollbar {
-  width: 8px;               /* width of the entire scrollbar */
+  width: 8px;
+  /* width of the entire scrollbar */
 }
+
 body::-webkit-scrollbar-track {
-  background: #f4f4f4;        /* color of the tracking area */
+  background: #f4f4f4;
+  /* color of the tracking area */
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #45B26F;    /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 3px solid #f4f4f4;  /* creates padding around scroll thumb */
+  background-color: #45B26F;
+  /* color of the scroll thumb */
+  border-radius: 20px;
+  /* roundness of the scroll thumb */
+  border: 3px solid #f4f4f4;
+  /* creates padding around scroll thumb */
 }
 
 .group-list::-webkit-scrollbar {
   width: 12px;
-  height: 10px;               /* width of the entire scrollbar */
-}
-.group-list::-webkit-scrollbar-track {
-  background: #002841;        /* color of the tracking area */
-}
-.group-list::-webkit-scrollbar-thumb {
-  background-color: #45B26F;    /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 2px solid #002841;  /* creates padding around scroll thumb */
+  height: 10px;
+  /* width of the entire scrollbar */
 }
 
-.upper-header{
+.group-list::-webkit-scrollbar-track {
+  background: #002841;
+  /* color of the tracking area */
+}
+
+.group-list::-webkit-scrollbar-thumb {
+  background-color: #45B26F;
+  /* color of the scroll thumb */
+  border-radius: 20px;
+  /* roundness of the scroll thumb */
+  border: 2px solid #002841;
+  /* creates padding around scroll thumb */
+}
+
+.upper-header {
   position: fixed;
   background-color: #f4f4f4;
   min-height: 60px;
@@ -48,7 +62,8 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   justify-content: space-between;
 }
-.left-upper{
+
+.left-upper {
   background-image: url('../images/logoPreparetec.png');
   background-size: cover;
   width: 395px;
@@ -56,21 +71,24 @@ body::-webkit-scrollbar-thumb {
   margin: 0px 20px;
   margin-top: 1%;
 }
-.right-upper{
+
+.right-upper {
   display: flex;
   min-width: 17%;
- 
+
   justify-content: space-between;
-  margin:  0, 30px;
+  margin: 0, 30px;
 }
-.logo-dem{
+
+.logo-dem {
   background-image: url('../images/logoDEM.png');
   background-size: cover;
   width: 135px;
   height: 55px;
   margin-top: 4.3%;
 }
-.logo-prefeitura{
+
+.logo-prefeitura {
   background-image: url('../images/logoPrefeituraMongagua.png');
   background-size: cover;
   width: 60px;
@@ -87,7 +105,8 @@ body::-webkit-scrollbar-thumb {
   border-radius: 0px 0px 20px 20px;
   position: fixed;
 }
-.header-index{
+
+.header-index {
   margin-top: 60px;
 }
 
@@ -142,7 +161,7 @@ h2 {
   align-items: center;
 }
 
-#inicio-content h2{
+#inicio-content h2 {
   text-shadow: 1px 1px #ffffFF;
 }
 
@@ -326,9 +345,11 @@ h2 {
   background-color: #002841;
   padding: 2%;
 }
-h1{
+
+h1 {
   font-size: 40px;
 }
+
 .line-green {
   padding: 1px 30px;
   background-color: #98ffa8;
@@ -397,46 +418,57 @@ h1{
   margin-top: 30px;
   padding: 2%;
 }
-.quem-somos-content{
+
+.quem-somos-content {
   display: flex;
   flex-direction: column;
   margin: 50px 0px;
 }
-.qs{
+
+.qs {
   max-width: 750px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   margin: 0px 30px;
 }
- .qs p{
+
+.qs p {
   margin: 10px 0;
   text-align: justify;
   font-size: 20px;
- }
+}
+
 .blue {
   color: #002841;
 }
-.listTitle{
+
+.listTitle {
   font-size: 30px;
   margin: 20px 0px;
 }
-.group-list{
+
+.group-list {
   display: flex;
   align-items: center;
-  overflow-x: auto; 
+  overflow-x: auto;
 }
-.group-list .logo-dem, .group-list .logo-prefeitura{
+
+.group-list .logo-dem,
+.group-list .logo-prefeitura {
   height: 150px;
   margin: 0px 40px;
 }
-.group-list .logo-prefeitura{
+
+.group-list .logo-prefeitura {
   min-width: 160px;
 }
-.group-list .logo-dem{
+
+.group-list .logo-dem {
   min-width: 360px;
 }
-.foto-card{
+
+.foto-card {
   display: flex;
   flex-direction: column;
   min-height: 300px;
@@ -452,14 +484,17 @@ h1{
   background-position: center;
   margin-bottom: 10px;
 }
-.card-content p{
+
+.card-content p {
   display: none;
   overflow-y: hidden;
 }
-.foto-card:hover > .card-content p{
+
+.foto-card:hover>.card-content p {
   display: block;
 }
-.card-content{
+
+.card-content {
   visibility: hidden;
   height: 0;
   overflow-y: hidden;
@@ -471,35 +506,43 @@ h1{
   color: #000;
   text-align: center;
 }
-.foto-card:hover{
+
+.foto-card:hover {
   cursor: pointer;
 }
-.foto-card:hover > .card-content{
+
+.foto-card:hover>.card-content {
   visibility: visible;
   display: flex;
   height: 120px;
   padding: 10px;
 }
-#priscila-eleuterio{
+
+#priscila-eleuterio {
   background-image: url('../images/priscila.jpeg');
 }
-#demerson{
+
+#demerson {
   background-image: url('../images/sem-foto-homem.jpg');
 }
-#felipe{
+
+#felipe {
   background-image: url('../images/felipe.jpg');
 }
-#ryan{
+
+#ryan {
   background-image: url('../images/sem-foto-homem.jpg');
 }
-#sophia{
+
+#sophia {
   background-image: url('../images/sophia.jpeg');
 }
-#thomas{
+
+#thomas {
   background-image: url('../images/thomas.jpg');
 }
 
-.nome-card p{
+.nome-card p {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -509,13 +552,20 @@ h1{
   width: 100%;
   border-radius: 20px 20px 0 0;
 }
-.item p, .image-logo, .apoiadores, .sobrenos, .funcionarios {
+
+.item p,
+.image-logo,
+.apoiadores,
+.sobrenos,
+.funcionarios {
   margin: 30px;
 }
-.professor{
+
+.professor {
   background-image: url(../images/sem-foto-homem.jpg);
 }
-footer{
+
+footer {
   background-color: #3C8F5D;
   display: flex;
   flex-direction: row;
@@ -525,54 +575,65 @@ footer{
   align-items: center;
   align-content: center;
 }
-.img-footer{
+
+.img-footer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
-.img-footer img{
+
+.img-footer img {
   height: 50px;
   margin: 10px;
 }
-.contato{
+
+.contato {
   border-left: 2px solid #fff;
   border-radius: 5px;
   padding-left: 5px;
   margin-left: 5px;
   margin-right: 15px;
 }
-.contato img{
+
+.contato img {
   height: 50px;
 }
-.contato a{
+
+.contato a {
   text-decoration: dashed;
 }
-.link-footer{
+
+.link-footer {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-.item-footer{
+
+.item-footer {
   justify-content: center;
 }
-.item-footer a{
+
+.item-footer a {
   color: white;
 }
-.envolvidos{
+
+.envolvidos {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-.envolvidos a{
+
+.envolvidos a {
   text-decoration: dashed;
   color: #fff;
 }
-.envolvidos .symetra{
+
+.envolvidos .symetra {
   color: white;
   background-color: purple;
   border-radius: 10px;
 }
 
- .sidebarAbrir{
+.sidebarAbrir {
   color: #fff;
   font-size: 25px;
   padding: 5px;
@@ -580,7 +641,7 @@ footer{
   display: none;
 }
 
-.sidebarFechar{
+.sidebarFechar {
 
   font-size: 24px;
 
@@ -591,23 +652,403 @@ footer{
 }
 
 
+/* 
 
 
+TELA DE CADASTRO
+
+
+*/
+
+.header-cadastro {
+  margin: 0;
+  background-color: #f4f4f4;
+  display: flex;
+  height: 70px;
+  width: 100vw;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 0px 30px #000;
+  position: fixed;
+}
+
+.header-cadastro .left-upper {
+  margin: 0px 20px;
+}
+
+.header-cadastro .right-upper .logo-dem,
+.header-cadastro .right-upper .logo-prefeitura {
+  margin: 0;
+}
+
+.header-cadastro .right-upper {
+  margin-right: 30px;
+}
+
+.main-cadastro {
+  margin-top: 0;
+  min-height: 100vh;
+  background-image: url('../images/sala-de-aula.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+}
+
+.form-cadastro {
+  margin-top: 10%;
+  background-color: white;
+  max-width: 700px;
+  min-width: 70%;
+  min-height: 300px;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #002841;
+  border-radius: 30px;
+  box-shadow: #000 3px 3px 30px;
+}
+
+.form-cadastro h2 {
+  width: 100%;
+  height: 120px;
+  justify-content: center;
+  color: #002841;
+}
+
+.form-cadastro .group-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-cadastro label {
+  margin: 10px;
+}
+
+.form-cadastro .input-cadastro,
+.form-cadastro select {
+  width: 280px;
+  height: 35px;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 18px;
+  border: 0.5px solid #002841;
+}
+
+.form-cadastro .button-submit {
+  display: flex;
+  height: 50px;
+  width: 100px;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  border: 2px solid #002841;
+  border-radius: 10px;
+  background-color: #afbec7;
+  color: #002841;
+  font-size: 15px;
+  font-weight: 700;
+  transition: 0.2s;
+}
+
+.form-cadastro .button-submit:hover {
+  background-color: #002841;
+  color: #f4f4f4;
+}
+
+.group-professores {
+  display: none;
+  flex-direction: column;
+}
+
+.group-alunos {
+  display: none;
+  flex-direction: column;
+}
+
+.group-professores div,
+.group-alunos div {
+  margin: 10px 0;
+  display: flex;
+}
+
+.form-cadastro #polos {
+  display: flex;
+  max-width: 20px;
+}
+
+@media(max-width: 1100px) {
+  #bonequinho-container {
+    display: none;
+  }
+
+  #logos img {
+    height: 60px;
+  }
+}
+
+@media(max-width: 700px) {
+  .qs p {
+    width: 100%;
+  }
+
+  #chats img {
+    height: 50px;
+  }
+
+  #logos img {
+    height: 50px;
+  }
+
+  .card-polos {
+    width: 260px;
+    height: 260px;
+    font-size: 19px;
+    margin: 10% 0px;
+  }
+
+  .titulo-card-polos {
+    height: 100px;
+  }
+
+  .links {
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .item {
+    width: 300px;
+  }
+
+  .item-center {
+    width: 300px;
+  }
+
+  .upper-header {
+    min-height: 30px;
+  }
+
+  .left-upper {
+    width: 187.5px;
+    height: 27.5px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .right-upper {
+    display: flex;
+    width: 25%;
+    justify-content: space-between;
+  }
+
+  .logo-dem {
+    width: 65.5px;
+    height: 27.5px;
+  }
+
+  .logo-prefeitura {
+    width: 30px;
+    height: 27.5px;
+  }
+
+  .header-index {
+    margin-top: 30px;
+  }
+
+  .main-index {
+    margin-top: 90px;
+  }
+
+  .quem-somos-content {
+    display: flex;
+    flex-direction: column;
+    margin: 30px 0px;
+  }
+
+  .qs {
+    margin: 0;
+  }
+
+  #inicio-content,
+  .links,
+  .nosso-projeto-texto1,
+  .nosso-projeto-texto2,
+  .texto-polos,
+  .card-polos,
+  .prof-content,
+  .qs p {
+    font-size: 15px;
+    display: flex;
+  }
+
+  .listTitle {
+    font-size: 18px;
+  }
+
+  h2 {
+    font-size: 25px;
+  }
+
+  .alunos,
+  .professores {
+    width: 200px;
+  }
+}
+
+@media (max-width: 940px) {
+  .logo-dem {
+    margin-right: 180px;
+    margin-top: 8.5px;
+  }
+
+  .logo-prefeitura {
+    margin-right: 180px;
+    margin-top: 8.5px;
+    display: block;
+
+  }
+
+  #btnMenu {
+    display: flex;
+    padding: .5rem 1rem;
+    font-size: 1rem;
+    cursor: pointer;
+    background: none;
+    border: none;
+  }
+
+  #menu {
+    display: block;
+    position: absolute;
+    width: 100%;
+    top: 70px;
+    right: 0px;
+    background-color: #9c9c9c;
+    transition: .6s;
+    z-index: 1000;
+    height: 0px;
+    visibility: hidden;
+    overflow-y: hidden;
+  }
+
+  #nav.active #menu {
+    height: calc(100vh - 70px);
+    visibility: visible;
+    overflow-y: hidden;
+  }
+
+  #menu a {
+    padding: 1rem 0;
+    margin: 0 1rem;
+    border-bottom: 2px solid rgba(0, 0, 0, .05);
+  }
+
+}
+
+/*
+
+
+//TELA DE LOGIN
+
+
+*/
+
+.header-login{
+  margin: 0;
+  background-color: #f4f4f4;
+  display: flex;
+  height: 70px;
+  width: 100vw;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 0px 30px #000;
+  position: fixed;
+}
+.header-login .left-upper{
+  margin: 0px 20px;
+}
+.header-login .right-upper .logo-dem, .header-login .right-upper .logo-prefeitura{
+  margin: 0;
+}
+.header-login .right-upper{
+  margin-right: 30px;
+}
+.main-login{
+  margin-top: 0;
+  min-height: 100vh;
+  background-image: url('../images/sala-de-aula.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form-login{
+  background-color: white;
+  max-width: 700px;
+  min-width: 70%;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #002841;
+  border-radius: 30px;
+  box-shadow: #000 3px 3px 30px;
+}
+.form-login h2{
+  width: 100%;
+  height: 120px;
+  justify-content: center;
+  color: #002841;
+}
+.form-login .group-form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.form-login label{
+  margin: 10px;
+}
+.form-login .input-login{
+  width: 280px;
+  height: 20px;
+}
+.form-login .button-submit{
+  display: flex;
+  height: 50px;
+  width: 100px;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  border: 2px solid #002841;
+  border-radius: 10px;
+  background-color: #afbec7;
+  color: #002841;
+  font-size: 15px;
+  font-weight: 700;
+  transition: 0.2s;
+}
+.form-login .button-submit:hover{
+  background-color: #002841;
+  color: #f4f4f4;
+}
 
 @media (max-width: 790px) {
 
-  .sidebarAbrir{
+  .sidebarAbrir {
 
-      color: #000;
-      cursor: pointer;
+    color: #000;
+    cursor: pointer;
   }
-  
 
 
-  .sidebarFechar{
-      color: #fff;
-      font-size: 24px;
-      cursor: pointer;
+
+  .sidebarFechar {
+    color: #fff;
+    font-size: 24px;
+    cursor: pointer;
   }
 
 
